src/test/deca/codegen/valid/avecObjet/call_method_one_param_int.ass
; start main program
; Passe1 table de méthode : A base=3(GB) taille=3
; Beginning of main instructions:
	TSTO #8	; Main Program
	BOV pile_pleine
	ADDSP #6
; --------------------------------------------------
; Construction des tables des methodes
; --------------------------------------------------
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD 2(GB), R0
	STORE R0, 4(GB)
	LOAD code.A.m, R0
	STORE R0, 5(GB)
; --------------------------------------------------
; Code du programme principal
; --------------------------------------------------
	NEW #1, R3
	BOV tas_plein
	LEA 3(GB), R0
	STORE R0, 0(R3)
	PUSH R3
	BSR init.A
	POP R3
	STORE R3, 6(GB)
	ADDSP #2
	LOAD 6(GB), R1
	STORE R1, 0(SP)
	LOAD #1, R1
	STORE R1, -1(SP)
	LOAD 0(SP), R2
	CMP #null, R2
	BEQ dereferencement_null
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #2
	HALT
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	BEQ Object.equals.true
	LOAD #0, R0
	BRA Object.equals.end
Object.equals.true:
	LOAD #1, R0
Object.equals.end:
	RTS
init.A:
; init.A (this = -2(LB))
	RTS
; Code des méthodes de la classe A
code.A.m:
; Méthode A.m
	TSTO #1
	BOV pile_pleine
	PUSH R3
	LOAD -3(LB), R1
	WINT
	WNL
	BRA fin.A.m
fin.A.m:
	POP R3
	RTS
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
tas_plein:
	WSTR "Erreur : allocation impossible, tas plein"
	WNL
	ERROR
dereferencement_null:
	WSTR "Erreur : dereferencement de null"
	WNL
	ERROR
; end main program
