src/test/deca/codegen/invalid/avecObjet/heap_overflow.ass
; start main program
; Passe1 table de méthode : A base=3(GB) taille=2
; Beginning of main instructions:
	TSTO #5	; Main Program
	BOV pile_pleine
	ADDSP #5
; --------------------------------------------------
; Construction des tables des methodes
; --------------------------------------------------
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD 2(GB), R0
	STORE R0, 4(GB)
; --------------------------------------------------
; Code du programme principal
; --------------------------------------------------
while_test_0:
	LOAD #1, R1
	CMP #0, R1
	BEQ while_end_0
	NEW #3, R1
	BOV tas_plein
	LEA 3(GB), R0
	STORE R0, 0(R1)
	PUSH R1
	BSR init.A
	POP R1
	STORE R1, 5(GB)
	BRA while_test_0
while_end_0:
	HALT
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	BEQ Object.equals.true
	LOAD #0, R0
	BRA Object.equals.end
Object.equals.true:
	LOAD #1, R0
Object.equals.end:
	RTS
init.A:
; init.A (this = -2(LB))
	TSTO #2
	BOV pile_pleine
	PUSH R3
	LOAD -2(LB), R2
	PUSH R2
	LOAD #1, R3
	POP R2
	STORE R3, 1(R2)
	LOAD -2(LB), R2
	PUSH R2
	LOAD #2, R3
	POP R2
	STORE R3, 2(R2)
	POP R3
	RTS
; Code des méthodes de la classe A
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
tas_plein:
	WSTR "Erreur : allocation impossible, tas plein"
	WNL
	ERROR
; end main program
